# HiSpatial

./: .gitignore  README.md  index.html  pyproject.toml
configs/: train_default.json
eval/: DATA_PREPARATION.md  eval_3dsrbench.py  eval_cv_bench.py  eval_emb_spatial.py  eval_q_spatial.py  eval_robospatial.py  eval_spatialrgpt.py  run_all.sh
hispatial/: __init__.py
hispatial/data/: __init__.py  tar_shard_dataset.py  vqa_dataset.py
hispatial/inference/: __init__.py  moge_processor.py  predictor.py
hispatial/model/: __init__.py  depth_encoder.py  hispatial_vlm.py  projector.py
prismatic/training/: __init__.py  metrics.py
prismatic/training/strategies/: vlm_base_strategy.py  vlm_fsdp.py
prismatic/util/: data_utils.py
qa_pairs/counting/: qa
qa_pairs/distance_o2c/: qa
qa_pairs/distance_o2o/: qa
qa_pairs/existance/: qa
qa_pairs/grounding_aabb/: qa
qa_pairs/level0/pairwise_depth/: qa
qa_pairs/level0/pixel_query/: qa
qa_pairs/orientation/: qa
qa_pairs/perspective_taking/: qa
qa_pairs/position_front_back/: qa
qa_pairs/position_left_right/: qa
qa_pairs/problem_solving/: qa
qa_pairs/size/height/: qa
qa_pairs/size/width/: qa
qa_pairs/spatial_description/: qa
scripts/: run_train.sh  train.py
